fix: the notion-external-mention svg icon is displayed abnormally on Safari

--- a/packages/react-notion-x/src/styles.css
+++ b/packages/react-notion-x/src/styles.css
@@ -2623,6 +2623,11 @@ svg.notion-page-icon {
   margin-right: 0.3em;
 }
 
+.notion-external-mention .notion-external-image svg {
+  width: 100%;
+  height: 100%;
+}
+
 .notion-external-description {
   display: flex;
   flex-direction: column;
